--- a/.github/workflows/tagging1.yaml
+++ b/.github/workflows/tagging1.yaml
@@ -3,7 +3,7 @@ name: Create Tag and Release
 on:
   workflow_dispatch: # Manual trigger
     inputs:
-      version:
+      version:v1.0.3
         description: 'Version number (e.g. v1.0.0)'
         required: true
   push:
