--- a/.github/workflows/tagging1.yaml
+++ b/.github/workflows/tagging1.yaml
@@ -1,43 +1,54 @@
-name: Create Tag and Release
+name: Auto Tag & Release
 
 on:
-  workflow_dispatch: # Manual trigger
-    inputs:
-      version:
-        description: 'Version number (e.g. v1.0.0)'
-        required: true
   push:
     branches:
-      - main  # Optional: trigger on push to main
+      - main               # Trigger when code is pushed to main
+  workflow_dispatch:       # Also allow running manually
 
 jobs:
   release:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Important for tagging
+          fetch-depth: 0   # Required to fetch all tags
 
-      - name: Set up Git user
+      - name: Set up Git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Create Git Tag
-        if: ${{ github.event_name == 'workflow_dispatch' }}
+      - name: Get latest tag
+        id: get_latest_tag
         run: |
-          git tag ${{ github.event.inputs.version }}
-          git push origin ${{ github.event.inputs.version }}
+          echo "tag=$(git describe --tags --abbrev=0 2>/dev/null || echo v0.0.0)" >> $GITHUB_OUTPUT
+
+      - name: Bump patch version
+        id: bump_version
+        run: |
+          current="${{ steps.get_latest_tag.outputs.tag }}"
+          echo "Current tag: $current"
+          version="${current#v}"
+          IFS='.' read -r major minor patch <<< "$version"
+          patch=$((patch+1))
+          new_tag="v${major}.${minor}.${patch}"
+          echo "New tag: $new_tag"
+          echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
+
+      - name: Create Git Tag
+        run: |
+          git tag ${{ steps.bump_version.outputs.new_tag }}
+          git push origin ${{ steps.bump_version.outputs.new_tag }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.event.inputs.version }}
-          name: Release ${{ github.event.inputs.version }}
-          body: |
-            ## Changes
-            - Describe the changes here
+          tag_name: ${{ steps.bump_version.outputs.new_tag }}
+          name: Release ${{ steps.bump_version.outputs.new_tag }}
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
